[gd_scene load_steps=12 format=3 uid="uid://d6b1o4eui1ff"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_dufgh"]
[ext_resource type="SpriteFrames" uid="uid://b1ox1aer6virl" path="res://art/sprite_sheets/player.tres" id="2_tqny2"]
[ext_resource type="Texture2D" uid="uid://cryehbxm8oadl" path="res://art/system/bang.png" id="3_3mn4s"]
[ext_resource type="AudioStream" uid="uid://dl7exp6ewprrj" path="res://audio/walk1.ogg" id="3_a1jnv"]
[ext_resource type="AudioStream" uid="uid://bbsgaxxqprkk8" path="res://audio/walk2.ogg" id="4_4p6ii"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rwhng"]
radius = 6.0
height = 12.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w3jsi"]
size = Vector2(12, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kkcvi"]
size = Vector2(32, 14)

[sub_resource type="Animation" id="Animation_mndq6"]
resource_name = "Bang"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.1, 0.1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(2.08165e-12, -10), Vector2(0, -24), Vector2(2.08165e-12, -37), Vector2(0, -24)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_s8twl"]
resource_name = "No Bang"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f1nea"]
_data = {
"Bang": SubResource("Animation_mndq6"),
"No Bang": SubResource("Animation_s8twl")
}

[node name="Player" type="CharacterBody2D"]
y_sort_enabled = true
position = Vector2(0, -1)
motion_mode = 1
script = ExtResource("1_dufgh")

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_rwhng")

[node name="Direction" type="Marker2D" parent="."]
position = Vector2(0, 1)

[node name="Player" type="Area2D" parent="Direction"]

[node name="Interact Area" type="CollisionShape2D" parent="Direction/Player"]
position = Vector2(6, 0)
shape = SubResource("RectangleShape2D_w3jsi")

[node name="DoorArea" type="Area2D" parent="Direction"]
collision_layer = 512
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Direction/DoorArea"]
visible = false
shape = SubResource("RectangleShape2D_kkcvi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
sprite_frames = ExtResource("2_tqny2")
animation = &"idle_side"
autoplay = "idle_side"
offset = Vector2(0, -9)

[node name="Bang" type="Sprite2D" parent="."]
modulate = Color(0.989333, 1, 0.36, 1)
z_index = 4
position = Vector2(2.08165e-12, -10)
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_3mn4s")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Bang"]
libraries = {
"": SubResource("AnimationLibrary_f1nea")
}
autoplay = "No Bang"

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_speed = 1.0

[node name="Walk1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_a1jnv")
volume_db = 14.054

[node name="Walk2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_4p6ii")
volume_db = 14.055

[connection signal="area_entered" from="Direction/Player" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Direction/Player" to="." method="_on_area_2d_area_exited"]
